fix(merlin-www-main-navigation): set logo position to absolute at large size to avoid jumping from h

--- a/packages/merlin-www-main-navigation/sass/wireframe/wireframe.scss
+++ b/packages/merlin-www-main-navigation/sass/wireframe/wireframe.scss
@@ -257,6 +257,10 @@
     width: 110px;
     z-index: 1;
 
+    @include at-x-large-size {
+        position: absolute;
+    }
+
     &.is-hidden {
         @include at-x-large-size {
             svg,
@@ -269,7 +273,7 @@
     svg,
     img {
         height: 100%;
-        transition-duration: 300ms;
+        transition: transform 300ms linear;
         width: 100%;
     }
 }
